# project-langs

./: .gitignore  .swp  README.md
bak/: Parser.y
bodge/: Eval.hs  InferTemplate.py  Main.hs  Syntax.hs  Type.hs  TypeBack.hs  test.bow
bow-lang/: bow-lang.cabal  run  test
bow-lang/src/: :w  Eval.hs  Main.hs  Parser.hs  RunTests.hs  Syntax.hs  Type.hs  ]
bow-lang/test/: :w  test001.bow  test003.bow  test004.bow  test005.bow  test006.bow  test_results.txt
bow-lang/tests/: test1.bow  test10.bow  test11.bow  test12.bow  test13.bow  test14.bow  test15.bow  test16.bow  test2.bow  test3.bow  test4.bow  test5.bow  test6.bow  test7.bow  test8.bow  test9.bow
bow-lang2/src/: Main.hs  Parser.hs  Syntax.hs  Type.hs
bow-lang2/test/: test001.bow  test002.bow  test004.bow  test005.bow  test_results.txt
llvm-fun/: llvm-fun.cabal
llvm-fun/llvm-asm/: a.out  adder  adder.ll  adder.s
llvm-fun/src/: Codegen.hs  Emit.hs  Main.hs  Parser.hs  Syntax.hs
llvm-fun/testCode/: 1.k
newlang/: newlang.cabal
recon-calc/: CreateTests.hs  RunTests.hs  recon-calc.cabal  run  testfiles
recon-calc/src/: CreateTests.hs  Eval.hs  Main.hs  Parser.hs  Syntax.hs  Top.hs  Type.hs  W  parseExp
recon-calc/test_code/: 2.arith  test001.recon  test002.recon  test003.recon  test004.recon  test005.recon  test006.recon  test007.recon  test008.recon  test009.recon  test010.recon  test011.recon  test012.recon  test013.recon  test014.recon  (+5 more)
simple-typed-calc/: run  simple-typed-calc.cabal
typed-arith/: Main.hs  cabal.sandbox.config  typed-arith.cabal
untyped-calculus/: untyped-calculus.cabal
(+23 files in other folders)
