name:                llvm-fun
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
-- license-file:        LICENSE
author:              felixgb
maintainer:          felixgbowman@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable llvm-codegen
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9, parsec >=3.1 && <3.2, llvm-general, llvm-general-pure, mtl, containers, haskeline
  hs-source-dirs:      src
  default-language:    Haskell2010
